<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/white">

    <ImageView
        android:id="@+id/dogPicture"
        android:layout_width="match_parent"
        android:layout_height="400dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        android:scaleType="fitXY"
        android:scaleY="1.1"
        android:scaleX="0.93"
        />

    <androidx.cardview.widget.CardView
        android:id="@+id/petSpecifications"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="2dp"
        app:cardBackgroundColor="@color/white"
        android:elevation="0dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/dogPicture">

        <TextView
            android:id="@+id/breedHolder"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginVertical="10dp"
            android:layout_marginStart="20dp"
            android:fontFamily="@font/exo_2"
            android:text="@string/breedHolder"
            android:textColor="@color/black"
            android:textSize="15sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/breedName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginVertical="10dp"
            android:layout_marginStart="73dp"
            android:fontFamily="@font/exo_2"
            android:textColor="@color/black"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/nameHolder"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="35dp"
            android:fontFamily="@font/exo_2"
            android:paddingBottom="10dp"
            android:text="@string/nameHolder"
            android:textColor="@color/black"
            android:textSize="15sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/dogName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="73dp"
            android:layout_marginTop="35dp"
            android:fontFamily="@font/exo_2"
            android:textColor="@color/black"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/ageHolder"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginVertical="10dp"
            android:layout_marginStart="240dp"
            android:fontFamily="@font/exo_2"
            android:text="@string/ageHolder"
            android:textColor="@color/black"
            android:textSize="15sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/dogAge"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginVertical="10dp"
            android:layout_marginStart="275dp"
            android:fontFamily="@font/exo_2"
            android:textColor="@color/black"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/genderHolder"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="240dp"
            android:layout_marginTop="35dp"
            android:fontFamily="@font/exo_2"
            android:paddingBottom="10dp"
            android:text="@string/genderHolder"
            android:textColor="@color/black"
            android:textSize="15sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/dogGender"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="305dp"
            android:layout_marginTop="35dp"
            android:fontFamily="@font/exo_2"
            android:textColor="@color/black"
            android:textSize="15sp" />

    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>