<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/input_design"
    android:elevation="1dp">

    <Button
        android:id="@+id/backButton"
        android:layout_width="30dp"
        android:layout_height="20dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        android:background="@drawable/ic_arrow_back"
        android:layout_marginHorizontal="12dp"
        android:layout_marginVertical="15dp"
        />

    <Button
        android:id="@+id/addButton"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        app:layout_constraintTop_toBottomOf="@id/backButton"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginTop="25dp"
        android:layout_marginEnd="20dp"
        android:layout_marginStart="20dp"
        android:background="@color/accent_green"
        android:textColor="@color/black"
        android:alpha="0.43"
        android:fontFamily="@font/exo_2"
        android:textStyle="bold"
        android:text="@string/newDogAdding"
        />

    <EditText
        android:id="@+id/nameHolder"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/addButton"
        android:layout_marginTop="30dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:background="@drawable/border"
        android:paddingBottom="10dp"
        android:paddingTop="10dp"
        android:hint="@string/newDogName"
        android:textColorHint="@color/black"
        android:textAlignment="center"
        android:fontFamily="@font/exo_2"
        android:textColor="@color/black"
        />

    <EditText
        android:id="@+id/breedHolder"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/nameHolder"
        android:layout_marginTop="20dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:background="@drawable/border"
        android:paddingBottom="10dp"
        android:paddingTop="10dp"
        android:hint="@string/newDogBreed"
        android:textColorHint="@color/black"
        android:textAlignment="center"
        android:fontFamily="@font/exo_2"
        android:textColor="@color/black"
        />

    <EditText
        android:id="@+id/ageHolder"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="@id/breedHolder"
        app:layout_constraintTop_toBottomOf="@id/breedHolder"
        android:layout_marginTop="40dp"
        android:background="@drawable/border"
        android:paddingBottom="10dp"
        android:paddingTop="10dp"
        android:hint="@string/newDogAge"
        android:textColorHint="@color/black"
        android:textAlignment="center"
        android:fontFamily="@font/exo_2"
        android:textColor="@color/black"
        android:inputType="number"
        />

    <RadioGroup
        android:id="@+id/genderHolder"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="@id/breedHolder"
        app:layout_constraintStart_toEndOf="@id/ageHolder"
        app:layout_constraintTop_toTopOf="@id/ageHolder"
        >

        <RadioButton
            android:id="@+id/genderMale"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:buttonTint="@color/black"
            android:fontFamily="@font/exo_2"
            android:text="Male"
            android:textColor="@color/black"
            android:textSize="18sp" />

        <RadioButton
            android:id="@+id/genderFemale"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:buttonTint="@color/black"
            android:fontFamily="@font/exo_2"
            android:text="Female"
            android:textColor="@color/black"
            android:textSize="18sp"
            />
    </RadioGroup>

    <ImageView
        android:id="@+id/imageHolder"
        android:layout_width="match_parent"
        android:layout_height="400dp"
        app:layout_constraintTop_toBottomOf="@id/ageHolder"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginTop="40dp"
        android:layout_marginBottom="20dp"
        android:clickable="true"
        android:src="@drawable/uploadpicture"
        android:scaleX="0.6"
        android:scaleY="0.6"
        />



</androidx.constraintlayout.widget.ConstraintLayout>