<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@drawable/input_design"
    android:elevation="1dp"
    >

    <Button
        android:id="@+id/backButton"
        android:layout_width="30dp"
        android:layout_height="20dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        android:background="@drawable/ic_arrow_back"
        android:layout_marginHorizontal="12dp"
        android:layout_marginVertical="15dp"
        />

    <TextView
        android:id="@+id/yourDogTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        android:textColor="@color/black"
        android:text="your dog"
        android:textAlignment="center"
        android:fontFamily="@font/comfortaa"
        android:textStyle="bold"
        android:layout_marginTop="40dp"
        android:textSize="25sp"
        />

    <TextView
        android:id="@+id/separator"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/black"
        app:layout_constraintTop_toBottomOf="@id/yourDogTitle"
        android:layout_marginTop="5dp"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="40dp"
        android:alpha="0.5"
        />

    <ImageView
        android:id="@+id/yourDogImage"
        android:layout_width="match_parent"
        android:layout_height="400dp"
        app:layout_constraintTop_toBottomOf="@id/separator"
        android:layout_marginTop="30dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:scaleType="fitXY"
        android:contentDescription="Dog Image"
        />

    <TextView
        android:id="@+id/secondSeparator"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/black"
        app:layout_constraintTop_toBottomOf="@id/yourDogImage"
        android:layout_marginTop="30dp"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="40dp"
        android:alpha="0.5"
        />

    <androidx.cardview.widget.CardView
        android:id="@+id/petSpecifications"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        app:cardBackgroundColor="@color/white"
        android:elevation="0dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/secondSeparator">

        <TextView
            android:id="@+id/breedHolder"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginVertical="10dp"
            android:layout_marginStart="20dp"
            android:fontFamily="@font/exo_2"
            android:text="@string/breedHolder"
            android:textColor="@color/black"
            android:textSize="15sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/breedName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginVertical="10dp"
            android:layout_marginStart="73dp"
            android:fontFamily="@font/exo_2"
            android:textColor="@color/black"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/nameHolder"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="35dp"
            android:fontFamily="@font/exo_2"
            android:paddingBottom="10dp"
            android:text="@string/nameHolder"
            android:textColor="@color/black"
            android:textSize="15sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/dogName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="73dp"
            android:layout_marginTop="35dp"
            android:fontFamily="@font/exo_2"
            android:textColor="@color/black"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/ageHolder"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginVertical="10dp"
            android:layout_marginStart="210dp"
            android:fontFamily="@font/exo_2"
            android:text="@string/ageHolder"
            android:textColor="@color/black"
            android:textSize="15sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/dogAge"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginVertical="10dp"
            android:layout_marginStart="245dp"
            android:fontFamily="@font/exo_2"
            android:textColor="@color/black"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/genderHolder"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="210dp"
            android:layout_marginTop="35dp"
            android:fontFamily="@font/exo_2"
            android:paddingBottom="10dp"
            android:text="@string/genderHolder"
            android:textColor="@color/black"
            android:textSize="15sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/dogGender"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="275dp"
            android:layout_marginTop="35dp"
            android:fontFamily="@font/exo_2"
            android:textColor="@color/black"
            android:textSize="15sp" />

    </androidx.cardview.widget.CardView>


</androidx.constraintlayout.widget.ConstraintLayout>